update type in app

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1106,10 +1106,6 @@
         "number": {
           "value": "2%",
           "type": "letterSpacing"
-        },
-        "initials": {
-          "value": "2%",
-          "type": "letterSpacing"
         }
       },
       "label": {
@@ -1119,10 +1115,6 @@
         },
         "number": {
           "value": "4%",
-          "type": "letterSpacing"
-        },
-        "initials": {
-          "value": "2%",
           "type": "letterSpacing"
         }
       }
@@ -1207,10 +1199,6 @@
         "number": {
           "value": "Index",
           "type": "fontFamilies"
-        },
-        "initials": {
-          "value": "Index",
-          "type": "fontFamilies"
         }
       },
       "label": {
@@ -1223,10 +1211,6 @@
           "type": "fontFamilies"
         },
         "number": {
-          "value": "Index",
-          "type": "fontFamilies"
-        },
-        "initials": {
           "value": "Index",
           "type": "fontFamilies"
         }
@@ -1270,15 +1254,15 @@
       "control": {
         "text": {
           "default": {
-            "value": "{app.config.fontWeight.medium}",
-            "type": "fontWeights"
-          },
-          "alt": {
             "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           },
+          "alt": {
+            "value": "{app.config.fontWeight.regular}",
+            "type": "fontWeights"
+          },
           "strong": {
-            "value": "{app.config.fontWeight.semibold}",
+            "value": "{app.config.fontWeight.medium}",
             "type": "fontWeights"
           }
         },
@@ -1294,13 +1278,7 @@
         },
         "number": {
           "default": {
-            "value": "{app.config.fontWeight.medium}",
-            "type": "fontWeights"
-          }
-        },
-        "initials": {
-          "default": {
-            "value": "{app.config.fontWeight.medium}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           }
         }
@@ -1308,17 +1286,17 @@
       "label": {
         "text": {
           "default": {
-            "value": "{app.config.fontWeight.medium}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           },
           "strong": {
-            "value": "{app.config.fontWeight.semibold}",
+            "value": "{app.config.fontWeight.medium}",
             "type": "fontWeights"
           }
         },
         "number": {
           "default": {
-            "value": "{app.config.fontWeight.medium}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           }
         }
@@ -1330,47 +1308,47 @@
             "type": "fontWeights"
           },
           "strong": {
-            "value": "{app.config.fontWeight.bold}",
+            "value": "{app.config.fontWeight.semibold}",
             "type": "fontWeights"
           }
         },
         "title": {
           "default": {
-            "value": "{app.config.fontWeight.semibold}",
+            "value": "{app.config.fontWeight.medium}",
             "type": "fontWeights"
           },
           "strong": {
-            "value": "{app.config.fontWeight.bold}",
+            "value": "{app.config.fontWeight.semibold}",
             "type": "fontWeights"
           }
         },
         "callout": {
-          "default": {
-            "value": "{app.config.fontWeight.medium}",
-            "type": "fontWeights"
-          },
-          "strong": {
-            "value": "{app.config.fontWeight.semibold}",
-            "type": "fontWeights"
-          }
-        },
-        "subtitle": {
-          "default": {
-            "value": "{app.config.fontWeight.medium}",
-            "type": "fontWeights"
-          },
-          "strong": {
-            "value": "{app.config.fontWeight.semibold}",
-            "type": "fontWeights"
-          }
-        },
-        "body": {
           "default": {
             "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           },
           "strong": {
             "value": "{app.config.fontWeight.medium}",
+            "type": "fontWeights"
+          }
+        },
+        "subtitle": {
+          "default": {
+            "value": "{app.config.fontWeight.book}",
+            "type": "fontWeights"
+          },
+          "strong": {
+            "value": "{app.config.fontWeight.medium}",
+            "type": "fontWeights"
+          }
+        },
+        "body": {
+          "default": {
+            "value": "{app.config.fontWeight.regular}",
+            "type": "fontWeights"
+          },
+          "strong": {
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           }
         },
@@ -1386,11 +1364,11 @@
         },
         "footnote": {
           "default": {
-            "value": "{app.config.fontWeight.medium}",
+            "value": "{app.config.fontWeight.book}",
             "type": "fontWeights"
           },
           "strong": {
-            "value": "{app.config.fontWeight.semibold}",
+            "value": "{app.config.fontWeight.medium}",
             "type": "fontWeights"
           }
         },
