--- a/tokens/application.json
+++ b/tokens/application.json
@@ -216,7 +216,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.primary.darken.hover}",
+                      "value": "{app.app.app.config.color.primary.darken.hover}",
                       "space": "hsl"
                     }
                   }
@@ -229,7 +229,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.primary.darken.active}",
+                      "value": "{app.app.app.config.color.primary.darken.active}",
                       "space": "hsl"
                     }
                   }
@@ -250,7 +250,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.primary.darken.hover}",
+                      "value": "{app.app.app.config.color.primary.darken.hover}",
                       "space": "hsl"
                     }
                   }
@@ -263,7 +263,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.primary.darken.active}",
+                      "value": "{app.app.app.config.color.primary.darken.active}",
                       "space": "hsl"
                     }
                   }
@@ -284,7 +284,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.primary.darken.hover}",
+                      "value": "{app.app.app.config.color.primary.darken.hover}",
                       "space": "hsl"
                     }
                   }
@@ -297,7 +297,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.primary.darken.active}",
+                      "value": "{app.app.app.config.color.primary.darken.active}",
                       "space": "hsl"
                     }
                   }
@@ -318,7 +318,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.primary.darken.hover}",
+                      "value": "{app.app.app.config.color.primary.darken.hover}",
                       "space": "hsl"
                     }
                   }
@@ -331,7 +331,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "darken",
-                      "value": "{app.config.color.primary.darken.active}",
+                      "value": "{app.app.app.config.color.primary.darken.active}",
                       "space": "hsl"
                     }
                   }
@@ -352,7 +352,7 @@
               "studio.tokens": {
                 "modify": {
                   "type": "alpha",
-                  "value": "{app.config.color.primary.alpha.border.hover} ",
+                  "value": "{app.app.app.config.color.accent.alpha.border.hover} ",
                   "space": "hsl"
                 }
               }
@@ -365,7 +365,7 @@
               "studio.tokens": {
                 "modify": {
                   "type": "alpha",
-                  "value": "{app.config.color.primary.alpha.border.active}",
+                  "value": "{app.app.app.config.color.primary.alpha.border.active}",
                   "space": "hsl"
                 }
               }
