--- a/tokens/application.json
+++ b/tokens/application.json
@@ -614,7 +614,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({app.config.color.success.hue.default}, {app.config.color.success.saturation.translucent}, 36%, {app.config.color.danger.alpha.bg.default})"
+              "value": "hsla({app.config.color.success.hue.default}, {app.config.color.success.saturation.translucent}, 36%, {app.config.color.success.alpha.bg.default})"
             },
             "tone": {
               "type": "color",
