--- a/tokens/application.json
+++ b/tokens/application.json
@@ -794,16 +794,8 @@
             },
             "onTranslucent": {
               "type": "color",
-              "value": "{app.color.surface.fg.default}",
-              "$extensions": {
-                "studio.tokens": {
-                  "modify": {
-                    "type": "alpha",
-                    "value": "0.26",
-                    "space": "hsl"
-                  }
-                }
-              }
+              "value": "hsl({app.config.color.neutral.hue.default}, {app.config.color.neutral.saturation.default}, 70%)",
+              "$extensions": {}
             }
           }
         },
