update theme colors

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -794,8 +794,7 @@
             },
             "onTranslucent": {
               "type": "color",
-              "value": "hsl({app.config.color.neutral.hue.default}, {app.config.color.neutral.saturation.default}, 70%)",
-              "$extensions": {}
+              "value": "hsl({app.config.color.neutral.hue.default}, {app.config.color.neutral.saturation.default}, 70%)"
             }
           }
         },
@@ -1912,15 +1911,15 @@
           "alpha": {
             "bg": {
               "default": {
-                "value": "0.24",
+                "value": "0.16",
                 "type": "other"
               },
               "hover": {
-                "value": "0.32",
+                "value": "0.24",
                 "type": "other"
               },
               "active": {
-                "value": "0.4",
+                "value": "0.32",
                 "type": "other"
               }
             },
