--- a/tokens/application.json
+++ b/tokens/application.json
@@ -207,7 +207,7 @@
             "bg": {
               "default": {
                 "type": "color",
-                "value": "hsl({app.config.color.primary.hue.default}, {app.config.color.primary.saturation.default}, 100%)"
+                "value": "hsla({app.config.color.primary.hue.default}, {app.config.color.primary.saturation.default}, 100%, 0.8)"
               },
               "hover": {
                 "type": "color",
