--- a/tokens/application.json
+++ b/tokens/application.json
@@ -406,10 +406,38 @@
             "type": "color"
           }
         },
-        "playground": {
-          "default": {
-            "value": "hsla({app.config.color.neutral.hue.default}, {app.config.color.neutral.saturation.default}, 0%, 0.55)",
-            "type": "color"
+        "element": {
+          "bg": {
+            "default": {
+              "value": "{app.color.component.primary.bg.translucent}",
+              "type": "color"
+            },
+            "hover": {
+              "value": "{app.color.component.primary.bg.translucent}",
+              "type": "color",
+              "$extensions": {
+                "studio.tokens": {
+                  "modify": {
+                    "type": "alpha",
+                    "value": "{app.config.color.primary.alpha.bg.hover}",
+                    "space": "hsl"
+                  }
+                }
+              }
+            },
+            "active": {
+              "value": "{app.color.component.primary.bg.translucent}",
+              "type": "color",
+              "$extensions": {
+                "studio.tokens": {
+                  "modify": {
+                    "type": "alpha",
+                    "value": "{app.config.color.primary.alpha.bg.active}",
+                    "space": "hsl"
+                  }
+                }
+              }
+            }
           }
         }
       },
