--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1057,11 +1057,11 @@
       "surface": {
         "display": {
           "default": {
-            "value": "{app.config.fontWeight.semibold}",
+            "value": "{app.config.fontWeight.medium}",
             "type": "fontWeights"
           },
           "strong": {
-            "value": "{app.config.fontWeight.bold}",
+            "value": "{app.config.fontWeight.semibold}",
             "type": "fontWeights"
           }
         },
@@ -1429,11 +1429,11 @@
       "surface": {
         "display": {
           "sm": {
-            "value": "-0.025rem",
+            "value": "-0.0125rem",
             "type": "letterSpacing"
           },
           "md": {
-            "value": "-0.05rem",
+            "value": "-0.0375rem",
             "type": "letterSpacing"
           },
           "lg": {
